--- a/source/stylesheets/globals/imports/_variables.scss
+++ b/source/stylesheets/globals/imports/_variables.scss
@@ -4,5 +4,5 @@ $c-lightest_gray: #f3f3f3;
 $c-light_gray: lighten($c-gray, 28%);
 $c-dark_gray: #a2a2a2;
 
-$f-headline: $sans;
-$f-content: $serif;
+$f-headline: $f-sans;
+$f-content: $f-serif;
