change  to , move to _fine_variables, create  map for project specific breakpoints, and add a map-merge of  and  to use with bp() mixin

--- a/source/stylesheets/globals/imports/_variables.scss
+++ b/source/stylesheets/globals/imports/_variables.scss
@@ -1,3 +1,9 @@
+// Project Specific breakpoints
+$breakpoints: ();
+
+// Merge $fine_breakpoints and $breakpoints to use with bp() mixin
+$breakpoints: map-merge($fine_breakpoints, $breakpoints);
+
 //Default colors (doesn't really need to be changed)
 $c-gray: #777;
 $c-lightest_gray: #f3f3f3;
