--- a/source/stylesheets/globals/imports/finescss/_fine_variables.scss
+++ b/source/stylesheets/globals/imports/finescss/_fine_variables.scss
@@ -20,6 +20,9 @@ $fine_breakpoints: (
   'landscape'       : unquote('only screen and (orientation: landscape)'),
 );
 
+// Project $breakpoints map to guard against deletion in project _variables
+$breakpoints: () !default;
+
 $em-base: 16px !default;
 
 $f-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -27,8 +30,6 @@ $f-serif: Georgia, serif;
 $f-script: Brush Script MT, Trebuchet MS, 'Helvetica Neue', Helvetica, Arial, script;
 $f-monospace: 'Bitstream Vera Sans Mono', Consolas, Monaco, Menlo, 'Andale Mono', monospace;
 $f-international: "Microsoft YaHei New","Microsoft Yahei","微软雅黑",宋体,SimSun,STXihei,"华文细黑","MS PGothic", $f-sans;
-
-$tweakpoints: () !default;
 
 $c-white: #fff;
 $c-black: #000;
