--- a/source/stylesheets/globals/imports/_variables.scss
+++ b/source/stylesheets/globals/imports/_variables.scss
@@ -1,3 +1,7 @@
+//////////////////////////////
+// Project Specific Variables
+//////////////////////////////
+
 // Project Specific breakpoints
 $breakpoints: ();
 
