move legacy moz to root level

--- a/source/stylesheets/globals/imports/finescss/_fine_mixins.scss
+++ b/source/stylesheets/globals/imports/finescss/_fine_mixins.scss
@@ -199,10 +199,6 @@
       @content;
     }
 
-    &:-moz-placeholder {
-      @content;
-    }
-
     &::-moz-placeholder {
       @content;
     }
@@ -219,6 +215,10 @@
     }
 
     ::-moz-placeholder {
+      @content;
+    }
+
+    :-moz-placeholder {
       @content;
     }
 
