add style recommendations to README; update naming convention of child files

--- a/source/stylesheets/globals/imports/finescss/_fine_variables.scss
+++ b/source/stylesheets/globals/imports/finescss/_fine_variables.scss
@@ -21,7 +21,7 @@ $breakpoints: () !default;
 $em-base: 16px !default;
 
 $f-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$f-serif: Georgia, serif;
+$f-serif: Times New Roman, Georgia, serif;
 $f-script: Brush Script MT, Trebuchet MS, 'Helvetica Neue', Helvetica, Arial, script;
 $f-monospace: 'Bitstream Vera Sans Mono', Consolas, Monaco, Menlo, 'Andale Mono', monospace;
 $f-international: 'Microsoft YaHei New', 'Microsoft Yahei', '微软雅黑', 宋体, SimSun, STXihei, '华文细黑', 'MS PGothic', $f-sans;
