use double quotes for interpolated mixins and increase spacing between selectors

--- a/source/stylesheets/globals/imports/finescss/_fine_mixins.scss
+++ b/source/stylesheets/globals/imports/finescss/_fine_mixins.scss
@@ -128,7 +128,7 @@
     @return $z-index;
   }
 
-  @warn 'There is no item '#{$element}' in this list; choose one of: #{$list}';
+  @warn "There is no item '#{$element}' in this list; choose one of: #{$list}";
   @return null;
 }
 
@@ -196,7 +196,7 @@
     }
   } @else {
     // If the key doesn't exist in the map
-    @warn 'Unfortunately, no value with #{$name} could be retrieved from `$breakpoint`. '
+    @warn "Unfortunately, no value with #{$name} could be retrieved from `$breakpoint`. "
         + 'Please make sure it is defined in `$breakpoints` map.';
   }
 }
