cleanup and update SCSS files

--- a/source/stylesheets/base.scss
+++ b/source/stylesheets/base.scss
@@ -1,21 +1,25 @@
-
-// Modules
+// Imports
 @import
   'globals/imports/finescss/fine',
   'globals/imports/variables',
-  'globals/imports/mixins'
+  'globals/imports/functions',
+  'globals/imports/mixins',
+  'globals/imports/extends'
 ;
 
 // Globals
 @import
   'globals/query_order',
+  'globals/type/typography',
   'globals/tags',
-  'globals/utilities',
-  'globals/typography'
+  'globals/type/headings',
+  'globals/type/icons',
+  'globals/utilities'
 ;
 
 // Layout
 @import
+  'globals/layouts/grid',
   'globals/layouts/header',
   'globals/layouts/footer'
 ;
@@ -23,8 +27,3 @@
 // Blocks
 
 // Views
-
-// Overrides
-@import
-  'globals/overrides'
-;
