rearrange so that finescss is more reflective of import method in finescss
move output files that are often copy/pasted between projects into finescss folder and adjust @import s accordingly

--- a/source/stylesheets/base.scss
+++ b/source/stylesheets/base.scss
@@ -1,6 +1,6 @@
 // Imports
 @import
-  'globals/imports/finescss/fine',
+  'finescss/fine',
   'globals/imports/variables',
   'globals/imports/functions',
   'globals/imports/mixins',
@@ -9,12 +9,13 @@
 
 // Globals
 @import
-  'globals/query_order',
+  'finescss/query_order',
   'globals/type/typography',
   'globals/tags',
   'globals/type/headings',
+  'finescss/icon',
   'globals/type/icons',
-  'globals/utilities'
+  'finescss/utilities'
 ;
 
 // Layout
